force-app/main/default/objects/mixmax__MixmaxSettings__c/mixmax__MixmaxSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Mixmax Settings</label>
</CustomObject>