force-app/main/default/objects/mixmax__MixmaxSettings__c/fields/mixmax__ApexCalloutsDisabled__c.field-meta.xml
<CustomField>
    <fullName>mixmax__ApexCalloutsDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this setting to leave the Mixmax Real Time Sync package installed, but in a non-functional state.</description>
    <label>Disable Mixmax RTS</label>
    <type>Checkbox</type>
</CustomField>