force-app/main/default/objects/mixmax__MixmaxSettings__c/fields/mixmax__ErrorLoggingEnabled__c.field-meta.xml
<CustomField>
    <fullName>mixmax__ErrorLoggingEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error logging enabled</label>
    <type>Checkbox</type>
</CustomField>