force-app/main/default/objects/mixmax__MixmaxSettings__c/fields/mixmax__MixmaxGatewayUrl__c.field-meta.xml
<CustomField>
    <fullName>mixmax__MixmaxGatewayUrl__c</fullName>
    <label>Mixmax Gateway URL (For testing only)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>