force-app/main/default/objects/mixmax__MixmaxSettings__c/fields/mixmax__MixmaxToken__c.field-meta.xml
<CustomField>
    <fullName>mixmax__MixmaxToken__c</fullName>
    <label>Mixmax Token</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>